feat: Establish victim login application with dynamic technique loading and demonstration cases.

--- a/case.html
+++ b/case.html
@@ -18,9 +18,47 @@
 
         <ul class="case-list">
             <li class="case-item">
-                <a href="cases/input_hidden.html" class="case-link">Input hidden</a>
+                <a href="cases/input_hidden.html" class="case-link">HTML Input hidden</a>
             </li>
-            <!-- 未來可以在這裡新增更多 Case -->
+            <li class="case-item">
+                <a href="cases/form_hidden.html" class="case-link">HTML Form hidden</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/display_none.html" class="case-link">CSS display:none</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/visibility_hidden.html" class="case-link">CSS visibility:hidden</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/visibility_collapse.html" class="case-link">CSS visibility:collapse</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/opacity_0.html" class="case-link">CSS opacity:0</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/filter_opacity(0).html" class="case-link">CSS filter:opacity(0)</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/clip_rect.html" class="case-link">CSS clip:rect(0, 0, 0, 0)</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/clip_path_inset.html" class="case-link">CSS clip-path:inset(0 0 100% 0)</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/transform_scale(0).html" class="case-link">CSS transform:scale(0)</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/font_size_0.html" class="case-link">CSS font-size:0</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/content_visibility_hidden.html" class="case-link">CSS content-visibility:hidden</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/tiny_size.html" class="case-link">CSS tiny size</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/overlay.html" class="case-link">Cover by overlay</a>
+            </li>
         </ul>
     </div>
 </body>
