--- a/cases/font_size_0.html
+++ b/cases/font_size_0.html
@@ -12,7 +12,7 @@
                 style-src 'self' 'unsafe-inline';
                 frame-ancestors 'none'">
 
-    <title>Case T01 - Login</title>
+    <title>Case T11 - Login</title>
     <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,18 +21,20 @@
 
 <body>
     <div class="glass-card">
-        <h1>Case </h1>
-        <p class="subtitle">HTML input hidden attribute</p>
+        <h1>Case T11</h1>
+        <p class="subtitle">CSS font-size:0</p>
 
         <form id="caseForm">
             <div class="form-group">
                 <label for="username"></label>
-                <input hidden type="text" id="username" name="username" autocomplete="username">
+                <input type="text" id="username" name="username" autocomplete="username"
+                    style="font-size: 0; height: 0; padding: 0; border: none;">
             </div>
 
             <div class="form-group">
                 <label for="password"></label>
-                <input hidden type="password" id="password" name="password" autocomplete="current-password">
+                <input type="password" id="password" name="password" autocomplete="current-password"
+                    style="font-size: 0; height: 0; padding: 0; border: none;">
             </div>
 
             <button type="button" id="Submit"
