feat: deploy old hidden techniques case

--- a/case.html
+++ b/case.html
@@ -59,6 +59,12 @@
             <li class="case-item">
                 <a href="cases/overlay.html" class="case-link">Cover by overlay</a>
             </li>
+            <li class="case-item">
+                <a href="cases/off_screen.html" class="case-link">Off screen</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/input_overflow.html" class="case-link">Input overflow</a>
+            </li>
         </ul>
     </div>
 </body>
