feat: add new tech login from and remove techniques id

--- a/case.html
+++ b/case.html
@@ -65,6 +65,18 @@
             <li class="case-item">
                 <a href="cases/input_overflow.html" class="case-link">Input overflow</a>
             </li>
+            <li class="case-item">
+                <a href="cases/negative_zindex.html" class="case-link">Negative z-index</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/visually_hidden.html" class="case-link">Visually hidden</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/details_summary.html" class="case-link">Details summary</a>
+            </li>
+            <li class="case-item">
+                <a href="cases/mask_image.html" class="case-link">Mask Image</a>
+            </li>
         </ul>
     </div>
 </body>
