--- a/cases/filter_opacity(0).html
+++ b/cases/filter_opacity(0).html
@@ -12,7 +12,7 @@
                 style-src 'self' 'unsafe-inline';
                 frame-ancestors 'none'">
 
-    <title>Case T07 - Login</title>
+    <title>filter:opacity(0)</title>
     <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
 
 <body>
     <div class="glass-card">
-        <h1>Case T07</h1>
+        <h1>Login</h1>
         <p class="subtitle">CSS filter:opacity(0)</p>
 
         <form id="caseForm">
