--- a/cases/overlay.html
+++ b/cases/overlay.html
@@ -12,7 +12,7 @@
                 style-src 'self' 'unsafe-inline';
                 frame-ancestors 'none'">
 
-    <title>Case T14 - Login</title>
+    <title>cover by overlay</title>
     <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,7 +39,7 @@
 
 <body>
     <div class="glass-card">
-        <h1>Case T14</h1>
+        <h1>Login</h1>
         <p class="subtitle">Covered by overlay</p>
 
         <form id="caseForm">
