--- a/cases/clip_path_inset.html
+++ b/cases/clip_path_inset.html
@@ -12,7 +12,7 @@
                 style-src 'self' 'unsafe-inline';
                 frame-ancestors 'none'">
 
-    <title>Case T09 - Login</title>
+    <title>clip-path:inset</title>
     <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
 
 <body>
     <div class="glass-card">
-        <h1>Case T09</h1>
+        <h1>Login</h1>
         <p class="subtitle">CSS clip-path:inset(0 0 100% 0)</p>
 
         <form id="caseForm">
