--- a/cases/clip_rect.html
+++ b/cases/clip_rect.html
@@ -12,7 +12,7 @@
                 style-src 'self' 'unsafe-inline';
                 frame-ancestors 'none'">
 
-    <title>Case T08 - Login</title>
+    <title>clip:rect</title>
     <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
 
 <body>
     <div class="glass-card">
-        <h1>Case T08</h1>
+        <h1>Login</h1>
         <p class="subtitle">CSS clip:rect(0, 0, 0, 0)</p>
 
         <form id="caseForm">
