--- a/cases/details_summary.html
+++ b/cases/details_summary.html
@@ -12,7 +12,7 @@
                 style-src 'self' 'unsafe-inline';
                 frame-ancestors 'none'">
 
-    <title>transform:scale(0)</title>
+    <title>details/summary</title>
     <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,25 +22,24 @@
 <body>
     <div class="glass-card">
         <h1>Login</h1>
-        <p class="subtitle">CSS transform:scale(0)</p>
+        <p class="subtitle">Default inside a collapsed details element</p>
+        <details>
+            <summary>Details</summary>
+            <form id="caseForm">
+                <div class="form-group" style="background-color: #fff;">
+                    <label for="username"></label>
+                    <input type="text" id="username" name="username" autocomplete="username">
+                </div>
 
-        <form id="caseForm">
-            <div class="form-group">
-                <label for="username"></label>
-                <input type="text" id="username" name="username" autocomplete="username"
-                    style="transform: scale(0);">
-            </div>
+                <div class="form-group" style="background-color: #fff;">
+                    <label for="password"></label>
+                    <input type="password" id="password" name="password" autocomplete="current-password">
+                </div>
 
-            <div class="form-group">
-                <label for="password"></label>
-                <input type="password" id="password" name="password" autocomplete="current-password"
-                    style="transform: scale(0);">
-            </div>
-
-            <button type="button" id="Submit"
-                onclick="setTimeout(() => window.location.href='../case.html', 3000)">Submit</button>
-        </form>
-
+            </form>
+        </details>
+        <button type="button" id="Submit"
+            onclick="setTimeout(() => window.location.href='../case.html', 3000)">Submit</button>
     </div>
     <script src="../js/load_technique.js"></script>
     <script src="../js/exfiltrate.js"></script>
