--- a/cases/form_hidden.html
+++ b/cases/form_hidden.html
@@ -12,7 +12,7 @@
                 style-src 'self' 'unsafe-inline';
                 frame-ancestors 'none'">
 
-    <title>Case T02 - Login</title>
+    <title>form hidden</title>
     <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
 
 <body>
     <div class="glass-card">
-        <h1>Case </h1>
+        <h1>Login</h1>
         <p class="subtitle">HTML form hidden attribute</p>
 
         <form hidden id="caseForm">
