--- a/cases/input_overflow.html
+++ b/cases/input_overflow.html
@@ -12,7 +12,7 @@
                 style-src 'self' 'unsafe-inline';
                 frame-ancestors 'none'">
 
-    <title>Case T16 - Login</title>
+    <title>input overflow</title>
     <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
 
 <body>
     <div class="glass-card">
-        <h1>Case T16</h1>
+        <h1>Login</h1>
         <p class="subtitle">Input overflow</p>
 
         <form id="caseForm">
