--- a/cases/mask_image.html
+++ b/cases/mask_image.html
@@ -12,29 +12,34 @@
                 style-src 'self' 'unsafe-inline';
                 frame-ancestors 'none'">
 
-    <title>transform:scale(0)</title>
+    <title>mask-image</title>
     <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <style>
+        .mask-hidden {
+            -webkit-mask-image: linear-gradient(transparent, transparent);
+            mask-image: linear-gradient(transparent, transparent);
+        }
+    </style>
 </head>
 
 <body>
     <div class="glass-card">
         <h1>Login</h1>
-        <p class="subtitle">CSS transform:scale(0)</p>
+        <p class="subtitle">CSS mask-image</p>
 
         <form id="caseForm">
-            <div class="form-group">
+            <div class="form-group mask-hidden">
                 <label for="username"></label>
-                <input type="text" id="username" name="username" autocomplete="username"
-                    style="transform: scale(0);">
+                <input hidden type="text" id="username" name="username" autocomplete="username">
             </div>
 
-            <div class="form-group">
+            <div class="form-group mask-hidden">
                 <label for="password"></label>
-                <input type="password" id="password" name="password" autocomplete="current-password"
-                    style="transform: scale(0);">
+                <input hidden type="password" id="password" name="password" autocomplete="current-password">
             </div>
 
             <button type="button" id="Submit"
