--- a/cases/visibility_collapse.html
+++ b/cases/visibility_collapse.html
@@ -12,7 +12,7 @@
                 style-src 'self' 'unsafe-inline';
                 frame-ancestors 'none'">
 
-    <title>Case T05 - Login</title>
+    <title>visibility:collapse</title>
     <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
 
 <body>
     <div class="glass-card">
-        <h1>Case T05</h1>
+        <h1>Login</h1>
         <p class="subtitle">CSS visibility:collapse</p>
 
         <form id="caseForm">
